# PCSC-Project

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  config.json  main.cpp  output.html
Doxygen/html/: _input_data_8h_source.html  _output_8h_source.html  _reader_8h_source.html  _solver_8h_source.html  annotated.html  class_diagonal_reader-members.html  class_diagonal_reader.html  class_file_reader-members.html  class_file_reader.html  class_function_reader-members.html  class_function_reader.html  class_inv_solver-members.html  class_inv_solver.html  class_output-members.html  class_output.html  class_power_solver-members.html  class_power_solver.html  class_q_r_solver-members.html  class_q_r_solver.html  class_reader-members.html  class_reader.html  class_solver-members.html  class_solver.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  hierarchy.html  index.html  struct_input_data-members.html  struct_input_data.html  utils_8h_source.html
Doxygen/html/search/: all_0.js  all_4.js  all_5.js  classes_1.js  classes_2.js  searchdata.js
Doxygen/latex/: _input_data_8h_source.tex  _output_8h_source.tex  _reader_8h_source.tex  _solver_8h_source.tex  annotated.tex  class_diagonal_reader.tex  class_file_reader.tex  class_function_reader.tex  class_inv_solver.tex  class_output.tex  class_power_solver.tex  class_q_r_solver.tex  class_reader.tex  class_solver.tex  files.tex  hierarchy.tex  refman.tex  struct_input_data.tex  utils_8h_source.tex
example/: example.csv
src/: Exceptions.cc  InputData.cc  InputData.h  Output.h  OutputData.h  OutputGenerator.cc  OutputGenerator.h  Reader.cpp  Reader.h  Solver.cc  Solver.h  exceptions.h  main.cc  utils.cc  utils.h
test/: ReaderTests.cc  SolverTests.cc  test.cc  test_utils.cc  test_utils.h
test/ReaderTests/: InvalidPath.json  PictureError.json  RectangularMatrix.json  coloredpic.json  cropping.json  func_neg_size.json  functiontest1.json  functiontest2.json  functiontest3.json  greyscalepic.json  missingparams.json  parse_edgecase.json  test1.json  test2.csv  test2.json  test3.csv  test3.json
